JOORSAND/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Common Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Integration</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Queue</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Third Party</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>JDT Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Queue</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_owner__c</fullName>
        <formula>Account.Owner.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseThreadId__c</fullName>
        <formula>&quot;ref:_00D&quot;&amp;MID(Id,4,1)&amp;RIGHT($Organization.Id, 4) &amp;&quot;._&quot;&amp; LEFT(Id,4)&amp;RIGHT(Id,5) &amp;&quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseThreadId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <description>Calculates the days the case has been open, or how long it was open before becoming closed.</description>
        <formula>IF(IsClosed,
DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),
TODAY()-DATEVALUE(CreatedDate)
)</formula>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Counter__c</fullName>
        <description>For reporting. Look up &quot;Power of One&quot; Salesforce articles.</description>
        <formula>1</formula>
        <label>Case Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Subreason__c</fullName>
        <label>Case Sub-reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Add New User</fullName>
                </value>
                <value>
                    <fullName>Add Price Type</fullName>
                </value>
                <value>
                    <fullName>Order Settings</fullName>
                </value>
                <value>
                    <fullName>Force Connect Accounts</fullName>
                </value>
                <value>
                    <fullName>Force Connect (Create New Account)</fullName>
                </value>
                <value>
                    <fullName>Export Customer List</fullName>
                </value>
                <value>
                    <fullName>What is JOOR?</fullName>
                </value>
                <value>
                    <fullName>Prospect Asking Questions (retail/brand)</fullName>
                </value>
                <value>
                    <fullName>New Feature/Enhancement Request</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Retail Support</fullName>
                </value>
                <value>
                    <fullName>Spam Calls</fullName>
                </value>
                <value>
                    <fullName>User Re-Education (product training/explaination)</fullName>
                </value>
                <value>
                    <fullName>Linesheet visibility (add)</fullName>
                </value>
                <value>
                    <fullName>Export Linesheet (add?)</fullName>
                </value>
                <value>
                    <fullName>Add/Edit Style(s) (add?)</fullName>
                </value>
                <value>
                    <fullName>Change Order Status</fullName>
                </value>
                <value>
                    <fullName>Merge Multiple POs into one PO</fullName>
                </value>
                <value>
                    <fullName>Move Orders (between accounts)</fullName>
                </value>
                <value>
                    <fullName>Resolve Orphan Orders</fullName>
                </value>
                <value>
                    <fullName>Order Update</fullName>
                </value>
                <value>
                    <fullName>Update Permissions</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>ERP &gt; Outreach/Discovery</fullName>
                </value>
                <value>
                    <fullName>ERP &gt; Development</fullName>
                </value>
                <value>
                    <fullName>ERP &gt; Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_FirstName__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact_FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Created By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Critical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Cases where the issue is stopping the client from conducting business.</description>
        <inlineHelpText>Check if this case is preventing the customer from conducting business. If checked, it should be addressed immediately.</inlineHelpText>
        <label>Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Response_Date__c</fullName>
        <description>The date of the last email from customer</description>
        <label>Customer Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_category__c</fullName>
        <label>Data category groups</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JOOR Brands</fullName>
                </value>
                <value>
                    <fullName>JOOR Premium Retailers</fullName>
                </value>
                <value>
                    <fullName>JOOR Free Retailers</fullName>
                </value>
                <value>
                    <fullName>Non-JOOR Brands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_for_pre_chat_form__c</fullName>
        <description>Field is used for pre-chat form for Live agent. Then the discription is updated based on this field.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_User_Last_Response_Date__c</fullName>
        <description>The date of the last email from client</description>
        <label>End-User Last Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalate_to__c</fullName>
        <inlineHelpText>Level 1 - Account Manager,
Level 2 - Senior Manager,
Level 3 - Director</inlineHelpText>
        <label>Escalate to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Key__c</fullName>
        <description>Link to JIRA board.</description>
        <inlineHelpText>Enter JIRA ID when applicable.</inlineHelpText>
        <label>Issue Key</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOOR_Account_ID__c</fullName>
        <formula>Account.JOOR_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JOOR Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <description>Returns the value in the Key Account field on the related Account.</description>
        <formula>Account.Key_Account__c</formula>
        <inlineHelpText>Checked if the related Account is a Key Account.</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minutes_Spent__c</fullName>
        <description>Self reported by Case owner.</description>
        <inlineHelpText>How many minutes did you spend working on this case?</inlineHelpText>
        <label>Minutes Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NY_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NY Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_can_we_help_with__c</fullName>
        <label>What can we help with?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Account Settings</fullName>
                </value>
                <value>
                    <fullName>Connections</fullName>
                </value>
                <value>
                    <fullName>General Inquiry / Other</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>iPad App</fullName>
                </value>
                <value>
                    <fullName>Linesheets / Styles</fullName>
                </value>
                <value>
                    <fullName>Login Issues</fullName>
                </value>
                <value>
                    <fullName>Orders</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>User Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CLOSED</columns>
        <columns>Minutes_Spent__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>Backup_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Backup Queue</label>
        <queue>Backup_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bonjour_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Bonjour</label>
        <queue>Bonjour</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bonjour_Support</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>bonjour@jooraccess.com,support@jooraccess.com</value>
        </filters>
        <label>Bonjour &amp; Support</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Buyer_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Buyer</label>
        <queue>Buyer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Buyer_Info</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>info@jooraccess.com,buyer@jooraccess.com</value>
        </filters>
        <label>Buyer &amp; Info</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSM_Overview_Queue</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>bonjour@jooraccess.com,support@jooraccess.com</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CSM</value>
        </filters>
        <label>CSM Overview Queue</label>
    </listViews>
    <listViews>
        <fullName>Default_queue_for_test_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Default queue_for_test</label>
        <queue>Default_queue_for_test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Info_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Info</label>
        <queue>Info</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integrations_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Integrations</label>
        <queue>Integrations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JB_List_View</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>JB List View</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CLOSED</columns>
        <columns>Minutes_Spent__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Age__c</columns>
        <columns>CASES.CLOSED</columns>
        <columns>Minutes_Spent__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>NMG_Retail_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>NMG Support</label>
        <queue>NMG_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CSM</fullName>
        <active>true</active>
        <businessProcess>Common Process</businessProcess>
        <label>CSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrations</fullName>
        <active>true</active>
        <businessProcess>Integration</businessProcess>
        <label>Integrations</label>
    </recordTypes>
    <recordTypes>
        <fullName>JDT</fullName>
        <active>true</active>
        <businessProcess>JDT Process</businessProcess>
        <label>JDT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Support</fullName>
        <active>true</active>
        <businessProcess>Common Process</businessProcess>
        <label>Product Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSM</fullName>
        <active>true</active>
        <businessProcess>Common Process</businessProcess>
        <label>RSM</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Case_as_Status_minutes</fullName>
        <active>true</active>
        <description>Minutes Spent and Resolution should only be required to set Case as Status &gt; Closed or Resolved</description>
        <errorConditionFormula>AND(
        ISBLANK( Minutes_Spent__c ),   
        OR(
           ISPICKVAL (Status , &quot;Closed&quot;),
           ISPICKVAL (Status , &quot;Resolved&quot;)
        )        
)</errorConditionFormula>
        <errorMessage>To close the case, fill Minutes Spent field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_as_Status_resolution</fullName>
        <active>true</active>
        <description>Minutes Spent and Resolution should only be required to set Case as Status &gt; Closed or Resolved</description>
        <errorConditionFormula>AND(
        ISBLANK( Resolution__c ),
        OR(
           ISPICKVAL (Status , &quot;Closed&quot;),
           ISPICKVAL (Status , &quot;Resolved&quot;)
        )        
)</errorConditionFormula>
        <errorMessage>To close the case, fill Resolution field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Case_Required_Fields</fullName>
        <active>false</active>
        <description>Forces certain fields to be filled in when closing a case. Requires validation rule because Closed Case page layout does not apply to lightning edition, so we can&apos;t require those fields during the close case process without a validation rule.</description>
        <errorConditionFormula>AND(
IsClosed,

OR(
ISBLANK(Resolution__c),
ISBLANK(Minutes_Spent__c)
)
)</errorConditionFormula>
        <errorMessage>Resolution and Minutes Spent are required to close this Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Case_Required_Fields_New</fullName>
        <active>true</active>
        <description>Forces certain fields to be filled in when closing a case. Requires validation rule because Closed Case page layout does not apply to lightning edition, so we can&apos;t require those fields during the close case process without a validation rule.</description>
        <errorConditionFormula>AND(
 PRIORVALUE( IsClosed ) = False,
 IsClosed,

OR(
ISBLANK(Resolution__c),
ISBLANK(Minutes_Spent__c)
)
)</errorConditionFormula>
        <errorMessage>Resolution and Minutes Spent are required to close this Case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minutes_Spent</fullName>
        <active>true</active>
        <description>Prohibits negative value of spent minutes</description>
        <errorConditionFormula>Minutes_Spent__c &lt; 0</errorConditionFormula>
        <errorMessage>The time spent can not be a negative value</errorMessage>
    </validationRules>
</CustomObject>